# Citibike_rides

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_feature_pipeline.txt
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  model_training_pipeline.yaml
docs/: after_feature_engineering_till_6.md  after_feature_pipeline.md  after_hyper.md  grading_rubric_for_citibike_project.md  project_plan.md
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  03_04_05_transform_processed_data_into_ts_data.ipynb  03_transform_processed_data_into_ts_data.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  07_baseline_models.ipynb  08_09_lightgbm_model.ipynb  10_lightgbm_model_with_fe_imp.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  18_plot_mae.ipynb
pipelines/: inference_pipeline.py  model_training_pipeline.py
src/: config.py  data_utils.py  feature_pipeline.py  feature_utils.py  inference.py  pipeline_utils.py  plot_utils.py
src/models/: baseline.py
src/utils/: mlflow_logging.py
