[project]
name = "citibike_feature_pipeline"
version = "0.1.0"
description = "Feature engineering pipeline for CitiBike"
requires-python = ">=3.8,<3.10"

dependencies = [
  "hopsworks==3.0.5",
  "confluent-kafka",
  "packaging",
  "pandas==1.5.3",        # ✅ binary-safe
  "pyarrow",
  "python-dotenv",
  "requests",
  "holidays",
  "numpy==1.24.4",        # ✅ binary-safe
  "scikit-learn==1.5.2"
]
