[project]
name = "citibike_feature_pipeline"
version = "0.1.0"
description = "Feature engineering pipeline for CitiBike"
requires-python = ">=3.9,<3.12"

dependencies = [
  "hopsworks==4.2.1",
  "confluent-kafka",
  "packaging",
  "pandas==1.5.3",
  "pyarrow",
  "python-dotenv",
  "requests",
  "holidays",
  "numpy==1.24.4",
  "scikit-learn==1.5.2"
]
